--- a/css/style.css
+++ b/css/style.css
@@ -12,36 +12,100 @@
 body{
     background: linear-gradient(to top, #D1DBDB , #DDDBD1 85%, #009688 85%);
 }
+
+.text-small-grey{
+    font-size: .6rem;
+    color: rgb(112, 112, 112);
+    vertical-align: super;
+}
 /* CONTAINER  */
 #container{
     height: 95vh;
     width: 80vw;
     margin: 2.5vh auto;
 }
-/* SX CONTACS */
-#contacs-area{
-    width: 35%;
-}
-#contacs-header{
+
+.header{
+    background-color: rgb(234,234,234);
     height: 60px;
+    padding: .5rem;
 }
-#notifications{
-    height: 65px;
+.header img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
 }
-#search{
-    height: 45px;
+.header .name,
+#notifications span{
+    font-size: .8rem;
+    font-weight: 500;
+}
+.header .icons-list li{
+    color: rgb(180, 180, 180);
+    font-size: 1.1rem;
 }
 
-#contacs-area ul img{
+/* SX contacts */
+#contacts-area{
+    width: 35%;
+}
+
+/* notifications  */
+#notifications{
+    background-color: rgb(142,218,251);
+}
+
+#notifications #bell{
+    background-color: white;
+    height: 45px;
+    width: 45px;
+    border-radius: 50%;
+    font-size: 1.1rem;
+    color: rgb(142,218,251);
+}
+
+/* nav con searchbar  */
+#search{
+
+}
+#search nav{
+    height: 1.75rem;
+}
+
+#search nav *{
+    border-color:rgb(235,235,235) ;
+}
+
+#search nav #glass{
+    width: 15%;
+    color: rgb(180,180,180);
+    font-size: .8rem;
+    cursor: pointer;
+}
+
+
+#search nav input{
+    font-size: .7rem;
+}
+/* contacts list  */
+#contacts-area ul img{
     height: 50px;
     width: 50px;
     border-radius: 50%;
 }
 
-#contacs-list li span{
+#contacts-list li:not(:last-child){
+    border-bottom: 1px solid rgb(235, 235, 235);
+}
+
+#contacts-list li span{
     font-size: .7rem;
     color: rgb(190, 190, 190);
     vertical-align: super;
+}
+
+#contacts-list li:hover{
+    background-color: rgb(230, 228, 228);
 }
 
 li span#time{
@@ -49,11 +113,9 @@ li span#time{
     top: .5rem;
     right: .5rem;
 }
+
+
 /* DX CHAT-AREA */
 #chat-area{
     width: 65%;
-}
-
-#chat-header{
-    height: 60px;
 }
