--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,12 @@ body{
     vertical-align: super;
 }
 
+li.backgrey{
+    background-color: rgb(230, 230, 230);
+}
+
 #contacts-list li:hover{
-    background-color: rgb(230, 228, 228);
+    background-color: rgb(246, 246, 246);
 }
 
 li span#time{
