--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ i{
     cursor: pointer;
 }
 
-#contacts-list li:not(:last-child){
+#contacts-list .li:not(:last-child){
     border-bottom: 1px solid rgb(235, 235, 235);
 }
 
