--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,19 @@ i{
     cursor: pointer;
 }
 
+.header .big-img{
+    position: absolute;
+    border-radius: 0;
+    top: 0;
+    width: 500px;
+    height: 500px;
+    z-index: 3;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 10px 0px 30px rgb(100, 100, 100);
+}
+
 /* CONTAINER  */
 #container{
     height: 95vh;
